@@ -1,17 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Tiny/YAML-Tiny-1.460.ebuild,v 1.1 2011/01/12 15:48:50 tove Exp $
-
-EAPI=3
-
-MODULE_AUTHOR=ADAMK
-MODULE_VERSION=1.46
-inherit perl-module
-
-DESCRIPTION="Read/Write YAML files with as little code as possible"
-
-SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE=""
-
-SRC_TEST=do
