@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/YAML-Tiny
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Tiny/ChangeLog,v 1.25 2011/02/04 07:40:08 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Tiny/ChangeLog,v 1.26 2011/04/02 10:32:48 tove Exp $
+
+  02 Apr 2011; Torsten Veller <tove@gentoo.org> -YAML-Tiny-1.43.ebuild,
+  -YAML-Tiny-1.44.ebuild, -YAML-Tiny-1.460.ebuild:
+  Cleanup
 
 *YAML-Tiny-1.480 (04 Feb 2011)
 
